--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
                 font-family: "Pretendard",serif;
             }
             body { 
-                background-color: #f2f2f2;
+                background-color: rgb(239, 254, 239);
             }
             .profile{
-                width: 100px;
-                height: 100px;
+                width: 150px;
+                height: 150px;
 
                 border-radius: 100%;
-
-                border : 2px solid #629850;
 
                 background-image: url(remove_bg.png);
                 background-position: center;
                 background-size: cover;
+
+                background-color: white;
             }
             .main{
-                color: #629850;
+                color: black;
                 font-size: 20px;
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
                 margin-top: 30px;
                 margin-bottom: 10px;
             }
             .sub{
-                color: #629850;
+                color: black;
                 font-size: 14px;
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
                 margin-top: 0px;
@@ -55,14 +55,14 @@
                 width: 300px;
                 height: 50px;
 
-                background-color: #effcd5;
+                background-color: white;
                 border-radius: 8px;
 
                 margin-bottom: 10px;
 
                 font-size: 14px;
                 font-weight: bold;
-                color: #629850;
+                color: black;
 
                 display: flex;
                 flex-direction: column;
@@ -73,11 +73,12 @@
 
                 text-decoration: none;
 
-                box-shadow: 3px 3px 5px 0px black;
+                box-shadow: 3px 3px 5px 0px green;
             }
             .wrap > a:hover{
-                background-color: green;
+                background-color: rgb(28, 187, 28);
                 color: white;
+                box-shadow: 3px 3px 5px 0px black;
             }
         </style>
     </head>
